# chandra_client

./: .gitignore  LICENSE  README.md  chandra_app.py  chandra_cli.py  pyproject.toml
.github/workflows/: integration.yml
chandra/: __init__.py  image.py  input.py  layout.py  model.py  output.py  parser.py  prompts.py  settings.py
chandra/model/: __init__.py  hf.py  schema.py  util.py  vllm.py
chandra/scripts/: cli.py  screenshot_app.py  vllm.py
chandra/scripts/templates/: screenshot.html
scripts/: start_vllm.py
